Lisätty käyttöliittymään kyky lisätä varauksia